# picoRGBstrip

./: CMakeLists.txt  README.md  apa102.pio  listen.sh  lwipopts.h  main.c  mbedtls_config.h  picoRGBstrip.c  secrets_template.h
lib/: CMakeLists.txt  apa102.c  apa102.h  apa102.pio
micropython_MQTT/: APA102_PIO.py  main.py  secrets.py
micropython_MQTT/lib/makerlab/: mlha.py
